changes to deleted files

--- a/index.html
+++ b/index.html
@@ -6,7 +6,12 @@ title: Eliana Duarte, PhD in Mathematics
 ---
 <div class="blurb">
 	<h1>Hi there, I'm Eliana!</h1>
-	<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
+	<p>  I am a postdoctoral reasearcher at Otto-von-Guericke Universit&auml;t Magdeburg. Previously
+       I worked in the Nonlinear algebra group at Max Planck Institute for Mathematics in the 
+  Sciences  in Leipzig. In May 2017 I obtained my PhD at University of Illinois Urbana - Champaign with
+<a href= "https://faculty.math.illinois.edu/~schenck/ "> Hal Schenck</a>. I like to work on
+problems related to Commutative Algebra, Algebraic Statistics and rigidity of rod and pinion
+2D and 3D frameworks. </p>
 </div><!-- /.blurb -->
 
 
