--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: Eliana Duarte, PhD in Mathematics
 ---
 
 <div class="blurb">
-	<h1>Hi there, I'm Eliana!</h1>
+	<h1>Eliana Duarte</h1>
 	<p>  I am a postdoctoral reasearcher at Otto-von-Guericke Universit&auml;t Magdeburg. Previously
        I worked in the Nonlinear algebra group at Max Planck Institute for Mathematics in the 
   Sciences  in Leipzig. In May 2017 I obtained my PhD at University of Illinois Urbana - Champaign with
