modified about page

--- a/about/index.html
+++ b/about/index.html
@@ -1,9 +1,9 @@
 ---
 layout: default
-title: About me
+title: Research
 ---
 
 <div class="blurb">
-	<h1>About</h1>
-	<p> Some information. </p>
+	<h1>Research</h1>
+	<p>  Preprints and publications. </p>
 </div><!-- /.blurb -->
