--- a/about/index.html
+++ b/about/index.html
@@ -6,4 +6,7 @@ title: Research
 <div class="blurb">
 	<h1>Research</h1>
 	<p>  Preprints and publications. </p>
+	<ul>
+    <li> <a href="https://arxiv.org/pdf/1802.04511.pdf"> Equations defining probability tree models.</a> Joint with <a href="https://sites.google.com/view/goergen">Christiane Goergen</a></li>
+</ul> 
 </div><!-- /.blurb -->
