change homepage and research

--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@ title: Eliana Duarte, PhD in Mathematics
 
 <div class="blurb">
 	<h1>Eliana Duarte</h1>
-	<p>  I am a postdoctoral reasearcher at Otto-von-Guericke Universit&auml;t Magdeburg. Previously
-       I worked in the Nonlinear algebra group at Max Planck Institute for Mathematics in the 
-  Sciences  in Leipzig. In May 2017 I obtained my PhD at University of Illinois Urbana - Champaign with
+	<p> I am a postdoctoral reasearcher Max-Planck-Institute for Mathematics in the Sciences. Starting 2020 I will
+	  be back to Otto-von-Guericke Universit&auml;t Magdeburg as a posdoc in the MathCore grou.
+	  In May 2017 I obtained my PhD at University of Illinois Urbana - Champaign with
 <a href= "https://faculty.math.illinois.edu/~schenck/ "> Hal Schenck</a>. I like to work on
-problems related to Commutative Algebra, Algebraic Statistics and rigidity of rod and pinion
-2D and 3D frameworks. </p>
+problems related to Commutative Algebra and  Algebraic Statistics. Recently I started working in the application
+	of structural equation models to soil ecology.</p>
 </div><!-- /.blurb -->
 
 
