--- a/about/index.html
+++ b/about/index.html
@@ -5,8 +5,30 @@ title: Research
 
 <div class="blurb">
 	<h1>Research</h1>
-	<p>  Preprints and publications. </p>
+	<h2 align="center"> Preprints</h2>
+        <font size="4"> <p> 
 	<ul>
-    <li> <a href="https://arxiv.org/pdf/1802.04511.pdf"> Equations defining probability tree models.</a> Joint with <a href="https://sites.google.com/view/goergen">Christiane Goergen</a></li>
-</ul> 
+	  <li> <a href="https://arxiv.org/pdf/1802.04511.pdf"> Equations defining probability tree models.</a> Join
+	    t with <a href="https://sites.google.com/view/goergen">Christiane Goergen</a></li>
+	  
+	</ul>
+	<h2 align="center"> Publications</h2>
+	div>
+<font size="4">
+        <ul>
+          <li><a href="https://arxiv.org/abs/1610.03820">E. Duarte. Implicitization of tensor product surfaces in
+	      the presence of a generic set
+of basepoints. Journal of Algebra and Its Applications (2016): 1750189.</a></li>
+          <li><a href="http://ieeexplore.ieee.org/document/7829593/?part=1">E. Duarte, and D. Lichtblau. Polynomial
+	      GCDs by Syzygies. Symbolic and Numeric Algorithms for Scientific Computing (SYNASC), 2016 18th
+	      International Symposium on. IEEE, 2016.
+</a></li>
+         <li><a href="http://www.ams.org/journals/proc/2016-144-01/S0002-9939-2015-12703-7/S0002-9939-2015-12703-7.pdf">
+         E. Duarte and H. Schenck Tensor Product Surfaces and linear syzygies, Proceedings of the American Mathematical Society 144.1 (2016): 65-72.
+</a></li>
+         <li><a href="http://new.math.uiuc.edu/quasistable/DuarteFrancisSeville1may13.pdf">E. Duarte and G. Francis Stability of quasicrystal frameworks in 2D and 3D, in Felix Escrig and Jose Sanches (eds), Proceedings of the First Conference Transformables, Seville, Spain, 2013.
+</a></li>
+      </ul>
+</font>
+</div>
 </div><!-- /.blurb -->
