--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@ title: Eliana Duarte, PhD in Mathematics
 
 <div class="blurb">
 	<h1>Eliana Duarte</h1>
-	<p> I am a postdoctoral reasearcher Max-Planck-Institute for Mathematics in the Sciences. Starting 2020 I will
-	  be back to Otto-von-Guericke Universit&auml;t Magdeburg as a posdoc in the MathCore grou.
-	  In May 2017 I obtained my PhD at University of Illinois Urbana - Champaign with
-<a href= "https://faculty.math.illinois.edu/~schenck/ "> Hal Schenck</a>. I like to work on
+	<p> I am a postdoctoral reasearcher at Max-Planck-Institute for Mathematics in the Sciences. Starting 2020 I will
+	  be back to Otto-von-Guericke Universit&auml;t Magdeburg as a postdoctoral researcher in the MathCore group.
+	  I like to work on
 problems related to Commutative Algebra and  Algebraic Statistics. Recently I started working in the application
-	of structural equation models to soil ecology.</p>
+	of structural equation models to soil ecology.  In May 2017 I obtained my PhD at University of Illinois Urbana - Champaign with
+<a href= "https://faculty.math.illinois.edu/~schenck/ "> Hal Schenck</a>.</p>
 </div><!-- /.blurb -->
 
 
