--- a/about/index.html
+++ b/about/index.html
@@ -13,7 +13,7 @@ title: Research
 	  
 	</ul>
 	<h2 align="center"> Publications</h2>
-	div>
+	</div>
 <font size="4">
         <ul>
           <li><a href="https://arxiv.org/abs/1610.03820">E. Duarte. Implicitization of tensor product surfaces in
