formating index and research

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ title: Eliana Duarte, PhD in Mathematics
 
 <div class="blurb">
 	<h1>Eliana Duarte</h1>
-	<p> I am a postdoctoral reasearcher at Max-Planck-Institute for Mathematics in the Sciences. Starting 2020 I will
+	<p> I am a postdoctoral reasearcher at Max-Planck-Institute for Mathematics in the Sciences in Leipzig, Germany. Starting 2020 I will
 	  be back to Otto-von-Guericke Universit&auml;t Magdeburg as a postdoctoral researcher in the MathCore group.
 	  I like to work on
 problems related to Commutative Algebra and  Algebraic Statistics. Recently I started working in the application
