--- a/about/index.html
+++ b/about/index.html
@@ -4,19 +4,31 @@ title: Research
 ---
 
 <div class="blurb">
-	<h1>Research</h1>
-	<h2 align="center"> Preprints</h2>
+  <h1>Research</h1>
+  <h2 align="left"> In preparation...</h2>
+
+  	<ul>
+	  <li> Grobner bases for staged treees </li> and
+	  <li> Implicitization of tensor product surfaces via virtual projective resolutions</li>
+	  
+	</ul>
+  
+  
+	<h2 align="left"> Preprints</h2>
         <font size="4"> <p> 
 	<ul>
-	  <li> <a href="https://arxiv.org/pdf/1802.04511.pdf"> Equations defining probability tree models.</a> Join
-	    t with <a href="https://sites.google.com/view/goergen">Christiane Goergen</a></li>
+	  <li> <a href="https://arxiv.org/abs/1903.06110"> Discrete statistical models with rational MLE.</a> Join
+	    t with <a href="https://orlandomarigliano.wordpress.com">Orlando Marigliano</a> and
+	   <a href="https://math.berkeley.edu/~bernd/">Bernd Sturmfels </a></li>
 	  
 	</ul>
 		</div>
-	<h2 align="center"> Publications</h2>
+	<h2 align="left"> Publications</h2>
 
 <font size="4">
-        <ul>
+         <ul>  <li> <a href="https://www.sciencedirect.com/science/article/abs/pii/S0747717119300379"> Equations defining probability tree models.</a> Join
+	    t with <a href="https://sites.google.com/view/goergen">Christiane Goergen</a></li>
+    
           <li><a href="https://arxiv.org/abs/1610.03820">E. Duarte. Implicitization of tensor product surfaces in
 	      the presence of a generic set
 of basepoints. Journal of Algebra and Its Applications (2016): 1750189.</a></li>
