--- a/about/index.html
+++ b/about/index.html
@@ -4,21 +4,24 @@ title: Research
 ---
 
 <div class="blurb">
+   
   <h1>Research</h1>
   <h2 align="left"> In preparation...</h2>
 
-  	<ul>
+1. Grobner bases for staged trees  	
+
+<ul>
 	  <li> Grobner bases for staged treees </li> and
 	  <li> Implicitization of tensor product surfaces via virtual projective resolutions</li>
 	  
 	</ul>
   
   
-	<h2 align="left"> Preprints</h2>
+	<h2 align="left"> Preprints and finished manuscripts</h2>
+2. Discrete statistical models with rational MLE.
         <font size="4"> <p> 
 	<ul>
-	  <li> <a href="https://arxiv.org/abs/1903.06110"> Discrete statistical models with rational MLE.</a> Join
-	    t with <a href="https://orlandomarigliano.wordpress.com">Orlando Marigliano</a> and
+	  <li> <a href="https://arxiv.org/abs/1903.06110"> Discrete statistical models with rational MLE.</a> Joint with <a href="https://orlandomarigliano.wordpress.com">Orlando Marigliano</a> and
 	   <a href="https://math.berkeley.edu/~bernd/">Bernd Sturmfels </a></li>
 	  
 	</ul>
