changes to research preprints

--- a/about/index.html
+++ b/about/index.html
@@ -7,29 +7,22 @@ title: Research
    
   <h1>Research</h1>
   <h2 align="left"> In preparation...</h2>
-
-1. Grobner bases for staged trees  	
-
-<ul>
-	  <li> Grobner bases for staged treees </li> and
-	  <li> Implicitization of tensor product surfaces via virtual projective resolutions</li>
-	  
-	</ul>
+ 	
+<ol>
+	  <li> Grobner bases for staged treees </li> 
   
   
-	<h2 align="left"> Preprints and finished manuscripts</h2>
-2. Discrete statistical models with rational MLE.
-        <font size="4"> <p> 
-	<ul>
+          <h2 align="left"> Preprints and finished manuscripts</h2>
+
+	  <li> Implicitization of tensor product surfaces via virtual projective resolutions</li>. Joint with Alexandra Seceleanu.
+
 	  <li> <a href="https://arxiv.org/abs/1903.06110"> Discrete statistical models with rational MLE.</a> Joint with <a href="https://orlandomarigliano.wordpress.com">Orlando Marigliano</a> and
 	   <a href="https://math.berkeley.edu/~bernd/">Bernd Sturmfels </a></li>
 	  
-	</ul>
-		</div>
 	<h2 align="left"> Publications</h2>
 
-<font size="4">
-         <ul>  <li> <a href="https://www.sciencedirect.com/science/article/abs/pii/S0747717119300379"> Equations defining probability tree models.</a> Join
+<fo
+         < <li> <a href="https://www.sciencedirect.com/science/article/abs/pii/S0747717119300379"> Equations defining probability tree models.</a> Join
 	    t with <a href="https://sites.google.com/view/goergen">Christiane Goergen</a></li>
     
           <li><a href="https://arxiv.org/abs/1610.03820">E. Duarte. Implicitization of tensor product surfaces in
