changes to research

--- a/about/index.html
+++ b/about/index.html
@@ -6,11 +6,13 @@ title: Research
 <div class="blurb">
    
   <h1>Research</h1>
+
+  <ol>
+  
   <h2 align="left"> In preparation...</h2>
  	
-<ol>
+
 	  <li> Grobner bases for staged treees </li> 
-  
   
           <h2 align="left"> Preprints and finished manuscripts</h2>
 
@@ -21,8 +23,7 @@ title: Research
 	  
 	<h2 align="left"> Publications</h2>
 
-<fo
-         < <li> <a href="https://www.sciencedirect.com/science/article/abs/pii/S0747717119300379"> Equations defining probability tree models.</a> Join
+ <li> <a href="https://www.sciencedirect.com/science/article/abs/pii/S0747717119300379"> Equations defining probability tree models.</a> Join
 	    t with <a href="https://sites.google.com/view/goergen">Christiane Goergen</a></li>
     
           <li><a href="https://arxiv.org/abs/1610.03820">E. Duarte. Implicitization of tensor product surfaces in
@@ -37,6 +38,6 @@ of basepoints. Journal of Algebra and Its Applications (2016): 1750189.</a></li>
 </a></li>
          <li><a href="http://new.math.uiuc.edu/quasistable/DuarteFrancisSeville1may13.pdf">E. Duarte and G. Francis Stability of quasicrystal frameworks in 2D and 3D, in Felix Escrig and Jose Sanches (eds), Proceedings of the First Conference Transformables, Seville, Spain, 2013.
 </a></li>
-      </ul>
+      </ol>
 </font>
 </div><!-- /.blurb -->
