--- a/about/index.html
+++ b/about/index.html
@@ -16,7 +16,9 @@ title: Research
   
           <h2 align="left"> Preprints and finished manuscripts</h2>
 
-	  <li> Implicitization of tensor product surfaces via virtual projective resolutions</li>. Joint with Alexandra Seceleanu.
+         <li> Implicitization of tensor product surfaces via virtual projective resolutions. Joint with Alexandra Seceleanu. Manuscript available upon request.</li>
+  <li> Global projections of the soild microbiome. (submitted)  Carlos Guerra, Manuel Delgado Baquerizo, Eliana Duarte, Orlando Marigliano,
+  Christiane Goergen, Fernando T. Maestre, Nico Eisenhauer</li>
 
 	  <li> <a href="https://arxiv.org/abs/1903.06110"> Discrete statistical models with rational MLE.</a> Joint with <a href="https://orlandomarigliano.wordpress.com">Orlando Marigliano</a> and
 	   <a href="https://math.berkeley.edu/~bernd/">Bernd Sturmfels </a></li>
