--- a/about/index.html
+++ b/about/index.html
@@ -16,7 +16,8 @@ title: Research
   
           <h2 align="left"> Preprints and finished manuscripts</h2>
 
-         <li> Implicitization of tensor product surfaces via virtual projective resolutions. Joint with Alexandra Seceleanu. Manuscript available upon request.</li>
+  <li> Implicitization of tensor product surfaces via virtual projective resolutions. Joint with
+    <a href="https://www.math.unl.edu/~aseceleanu2/" >Alexandra Seceleanu</a>. Manuscript available upon request.</li>
   <li> Global projections of the soild microbiome. (submitted)  Carlos Guerra, Manuel Delgado Baquerizo, Eliana Duarte, Orlando Marigliano,
   Christiane Goergen, Fernando T. Maestre, Nico Eisenhauer</li>
 
@@ -25,8 +26,8 @@ title: Research
 	  
 	<h2 align="left"> Publications</h2>
 
- <li> <a href="https://www.sciencedirect.com/science/article/abs/pii/S0747717119300379"> Equations defining probability tree models.</a> Join
-	    t with <a href="https://sites.google.com/view/goergen">Christiane Goergen</a></li>
+  <li> <a href="https://www.sciencedirect.com/science/article/abs/pii/S0747717119300379"> Equations defining probability tree models.</a> Joint
+    with <a href="https://sites.google.com/view/goergen">Christiane Goergen</a></li>
     
           <li><a href="https://arxiv.org/abs/1610.03820">E. Duarte. Implicitization of tensor product surfaces in
 	      the presence of a generic set
