--- a/about/index.html
+++ b/about/index.html
@@ -5,16 +5,13 @@ title: Research
 
 <div class="blurb">
    
-  <h1>Research</h1>
+  <h1 align="left"> Research </h1>
 
   <ol>
+  <h2 align="left"> In preparation</h2>
+     <li> Grobner bases for staged treees. Joint with Lamprini Ananiadi. </li> 
   
-  <h2 align="left"> In preparation...</h2>
- 	
-
-	  <li> Grobner bases for staged treees </li> 
-  
-          <h2 align="left"> Preprints and finished manuscripts</h2>
+     <h2 align="left"> Preprints and manuscripts</h2>
 
   <li> Implicitization of tensor product surfaces via virtual projective resolutions. Joint with
     <a href="https://www.math.unl.edu/~aseceleanu2/" >Alexandra Seceleanu</a>. Manuscript available upon request.</li>
