added picture and teaching files

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@ title: Eliana Duarte, PhD in Mathematics
 ---
 
 <div class="blurb">
-	<h1>Eliana Duarte</h1>
-	<p> I am a postdoctoral reasearcher at Max-Planck-Institute for Mathematics in the Sciences in Leipzig, Germany. Starting 2020 I will
+  <h1>Eliana Duarte</h1>
+   <p align = "right" > <img src="/assets/elianaProfile.JPG" alt="Eliana" align="left" style="width:200px;height:200px;"> I am a postdoctoral reasearcher at Max-Planck-Institute for Mathematics in the Sciences in Leipzig, Germany. Starting 2020 I will
 	  be back to Otto-von-Guericke Universit&auml;t Magdeburg as a postdoctoral researcher in the MathCore group.
 	  I like to work on
 problems related to Commutative Algebra and  Algebraic Statistics. Recently I started working in the application
