--- a/about/index.html
+++ b/about/index.html
@@ -13,8 +13,8 @@ title: Research
   
      <h2 align="left"> Preprints and manuscripts</h2>
 
-  <li> Implicitization of tensor product surfaces via virtual projective resolutions. Joint with
-    <a href="https://www.math.unl.edu/~aseceleanu2/" >Alexandra Seceleanu</a>. Manuscript available upon request.</li>
+  <li> <a href="https://arxiv.org/abs/1908.02086">Implicitization of tensor product surfaces via virtual projective resolutions</a>. Joint with
+    <a href="https://www.math.unl.edu/~aseceleanu2/" >Alexandra Seceleanu</a></li>
   <li> Global projections of the soil microbiome. (submitted) <a href = "https://scholar.google.pt/citations?user=0stRyvUAAAAJ&hl=en"> Carlos Guerra</a>, <a href = "https://scholar.google.com/citations?user=oxRf6bEAAAAJ&hl=en">
       Manuel Delgado Baquerizo </a>, Eliana Duarte, <a href="https://orlandomarigliano.wordpress.com">Orlando Marigliano</a>,
     <a href="https://sites.google.com/view/goergen">Christiane Goergen</a>, <a href="http://maestrelab.com/en/">Fernando T. Maestre</a>,
