--- a/teaching/index.html
+++ b/teaching/index.html
@@ -5,5 +5,26 @@ title: Teaching
 
 <div class="blurb">
 	<h1> Teaching</h1>
-	<p> This is a list of my teaching record. </p>
+<li>For the 2018 Summer Semester I was in charge of the masters seminar in Algebra and Geometry
+at OVGU Magdeburg.
+<a href= "seminareiag.html">Seminare IAG. </a></li>
+<li>From November 2017 to January 2018 I co-organized a joint reading group on syzygies with
+OVGU Magdeburg and MPI Leipzig. <a href= "syzygies.html">Syzygies. </a></li>
+
+<li> During my graduate studies at University of Illinois Urbana - Champaign I was a
+teaching assistant for the following classes: 
+<ul>
+         <li>Theory of arithmetic for elementary school teachers</li>
+         <li> Differential Calculus
+</li>
+         <li>Integral Calculus
+</li>
+         <li> Calculus in several variables
+</li>
+      </ul>
+</li>
+</div>
+</font>
+</ul>
+
 </div><!-- /.blurb -->
