several changed in teaching and CV

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@ title: Eliana Duarte, PhD in Mathematics
 <div class="blurb">
   <h1>Eliana Duarte</h1>
    <p align = "right" > <img src="/assets/elianaProfile.JPG" alt="Eliana" align="left" style="width:200px;height:200px;"> I am a postdoctoral reasearcher at Max-Planck-Institute for Mathematics in the Sciences in Leipzig, Germany. Starting 2020 I will
-	  be back to Otto-von-Guericke Universit&auml;t Magdeburg as a postdoctoral researcher in the MathCore group.
+     be back to <a href = "https://www.math.ovgu.de/IAG.html">Otto-von-Guericke Universit&auml;t Magdeburg</a> as a postdoctoral researcher in the <a href= "https://www.mathcore.ovgu.de">
+       MathCore</a> group.
 	  I like to work on
 problems related to Commutative Algebra and  Algebraic Statistics. Recently I started working in the application
 	of structural equation models to soil ecology.  In May 2017 I obtained my PhD at University of Illinois Urbana - Champaign with
