added link to main webpage

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ problems related to Commutative Algebra and  Algebraic Statistics. Recently I st
 	of structural equation models to soil ecology.  In May 2017 I obtained my PhD at University of Illinois Urbana - Champaign with
      <a href= "https://faculty.math.illinois.edu/~schenck/ "> Hal Schenck</a>.</p>
 
-   <a src="https://www.emduart2.github.io/DuarteEliana_NASO_20200325.pdf">SLIDES - ALGEBRAIC GEOMETRY WITH A VIEW TOWARDS APPLICATIONS. Nonlinear Algebra Seminar Online (NASO).</a>
+<h1>   <a href="https://emduart2.github.io/assets/DuarteEliana_NASO_20200325.pdf">SLIDES - ALGEBRAIC GEOMETRY WITH A VIEW TOWARDS APPLICATIONS. Nonlinear Algebra Seminar Online (NASO).</a></h1>
 </div><!-- /.blurb -->
 
 
