--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@ title: Eliana Duarte, PhD in Mathematics
 
 <div class="blurb">
   <h1>Eliana Duarte</h1>
-   <p align = "right" > <img src="/assets/elianaProfile.JPG" alt="Eliana" align="left" style="width:200px;height:200px;"> I am a postdoctoral reasearcher at Max-Planck-Institute for Mathematics in the Sciences in Leipzig, Germany. Starting 2020 I will
-     be back to <a href = "https://www.math.ovgu.de/IAG.html">Otto-von-Guericke Universit&auml;t Magdeburg</a> as a postdoctoral researcher in the <a href= "https://www.mathcore.ovgu.de">
-       MathCore</a> group.
+  <p align = "right" > <img src="/assets/elianaProfile.JPG" alt="Eliana" align="left" style="width:200px;height:200px;"> I am a postdoctoral reasearcher at  <a href = "https://www.math.ovgu.de/IAG.html">Otto-von-Guericke Universit&auml;t Magdeburg</a>
+    in the  <a href= "https://www.mathcore.ovgu.de">
+       MathCore</a> group. 
 	  I like to work on
-problems related to Commutative Algebra and  Algebraic Statistics. Recently I started working in the application
+problems related to Algebraic Statistics, computational Algebra and Geometry. Recently I started working in the application
 	of structural equation models to soil ecology.  In May 2017 I obtained my PhD at University of Illinois Urbana - Champaign with
      <a href= "https://faculty.math.illinois.edu/~schenck/ "> Hal Schenck</a>.</p>
 
-<h1>   <a href="https://emduart2.github.io/assets/DuarteEliana_NASO_20200325.pdf">SLIDES - ALGEBRAIC GEOMETRY WITH A VIEW TOWARDS APPLICATIONS. Nonlinear Algebra Seminar Online (NASO).</a></h1>
+
 </div><!-- /.blurb -->
 
 
