added link to tensor voices

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@ title: Eliana Duarte, PhD in Mathematics
 	  I like to work on
 problems related to Algebraic Statistics, computational Algebra and Geometry. Recently I started working in the application
 	of structural equation models to soil ecology.  In May 2017 I obtained my PhD at University of Illinois Urbana - Champaign with
-     <a href= "https://faculty.math.illinois.edu/~schenck/ "> Hal Schenck</a>.</p>
+    <a href= "https://faculty.math.illinois.edu/~schenck/ "> Hal Schenck</a>.</p>
+  Checkout <a href = "https://tensorvoices.de">TensorVoices</a> a five episode podcast of conversations about tensors with enthusiastic guests. Hosted by <a href="https://thomas-kahle.de">Thomas Kahle and me.
 
 
 </div><!-- /.blurb -->
