--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@ title: Eliana Duarte, PhD in Mathematics
 
 <div class="blurb">
   <h1>Eliana Duarte</h1>
-  <p align = "right" > <img src="/assets/elianaProfile.JPG" alt="Eliana" align="left" style="width:200px;height:200px;">
-    I am a Junior Researcher at Centro de Matem\'atica Universidade do Porto in Porto, Portugal. My funding is provided by
-    the Funda&#199ao para a Ciencia e a Tecnologia <a href= "https://www.fct.pt"> </a>  (FCT).
-    Previously I was a postdoctoral researcher in the research training group MathCore at Otto-von-Guericke Universit&auml t Magdeburg.
+  <p align = "right" > <img src="/assets/Eliana.png" alt="Eliana" align="left" style="width:200px;height:200px;">
+    I am a Junior Researcher at Centro de Matem&aacutetica Universidade do Porto in Porto, Portugal. My funding is provided by
+    the Funda&ccedil&otilde para a Ciencia e a Tecnologia <a href= "https://www.fct.pt"> </a>  (FCT).
+    Previously I was a postdoctoral researcher in the research training group MathCore at Otto-von-Guericke Universit&aumlt Magdeburg.
 	  I like to work on
-problems related to Algebraic Statistics, computational Algebra and Geometry.  In May 2017 I obtained my PhD at University of Illinois Urbana - Champaign with
+Computational Algebra and  Geometry and Algebraic Statistics.  In May 2017 I obtained my PhD at University of Illinois Urbana - Champaign with
     <a href= "https://faculty.math.illinois.edu/~schenck/ "> Hal Schenck</a>.</p>
   Checkout <a href = "https://tensorvoices.de">TensorVoices</a> a five episode podcast of conversations about tensors with enthusiastic guests. Hosted by <a href="https://thomas-kahle.de">Thomas Kahle and me.
 
