--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ title: Eliana Duarte, PhD in Mathematics
   <h1>Eliana Duarte</h1>
   <p align = "right" > <img src="/assets/Eliana.jpg" alt="Eliana" align="left" style="width:350px;height:200px;">
     I am a Junior Researcher at Centro de Matem&aacutetica Universidade do Porto in Porto, Portugal. My funding is provided by
-    the Funda&ccedil&otilde para a Ciencia e a Tecnologia <a href= "https://www.fct.pt"> </a>  (FCT).
+    the Funda&ccedil&otilde para a Ci&ecircncia e a Tecnologia <a href= "https://www.fct.pt"> </a>  (FCT).
     Previously I was a postdoctoral researcher in the research training group MathCore at Otto-von-Guericke Universit&aumlt Magdeburg.
 	  I like to work on
 Computational Algebra and  Geometry and Algebraic Statistics.  In May 2017 I obtained my PhD at University of Illinois Urbana - Champaign with
