--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@ title: Eliana Duarte, PhD in Mathematics
   <p align = "right" > <img src="/assets/Eliana.jpg" alt="Eliana" align="left" style="width:350px;height:200px;">
     I am a Junior Researcher at Centro de Matem&aacutetica Universidade do Porto in Porto, Portugal. My funding is provided by
     the Funda&ccedil&otilde para a Ci&ecircncia e a Tecnologia <a href= "https://www.fct.pt"> </a>  (FCT).
-    Previously I was a postdoctoral researcher in the research training group MathCore at Otto-von-Guericke Universit&aumlt Magdeburg.
+    Previously I was a postdoctoral researcher in the research training group <a href="https://www.mathcore.ovgu.de">MathCore</a> at Otto-von-Guericke Universit&aumlt Magdeburg
+    and the<a href="https://www.mis.mpg.de/nlalg/research.html">  Nonlinear Algebra group </a> at Max-Planck-Institute for Mathematics in the Sciences in Leipzig.
 	  I like to work on
 Computational Algebra and  Geometry and Algebraic Statistics.  In May 2017 I obtained my PhD at University of Illinois Urbana - Champaign with
     <a href= "https://faculty.math.illinois.edu/~schenck/ "> Hal Schenck</a>.</p>
