email and video

--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@ title: Eliana Duarte, PhD in Mathematics
 	  I like to work on
 Computational Algebra and  Geometry and Algebraic Statistics.  In May 2017 I obtained my PhD at University of Illinois Urbana - Champaign with
     <a href= "https://faculty.math.illinois.edu/~schenck/ "> Hal Schenck</a>.</p>
-  Checkout <a href = "https://tensorvoices.de">TensorVoices</a> a five episode podcast of conversations about tensors with enthusiastic guests. Hosted by <a href="https://thomas-kahle.de">Thomas Kahle and me.
+  Checkout <a href = "https://tensorvoices.de">TensorVoices</a> a five episode podcast of conversations about tensors with enthusiastic guests. Hosted by <a href="https://thomas-kahle.de">
+    Thomas Kahle and me.
 
-
+Check out a video abstract about  <a href= "https://www.youtube.com/watch?v=CccVNRFmR1I">  context-specific causal models </a>.</p>
 </div><!-- /.blurb -->
 
 
