--- a/index.html
+++ b/index.html
@@ -19,81 +19,12 @@ Computational Algebra and  Geometry and Algebraic Statistics.  In May 2017 I obt
 Check out a video abstract about  <a href= "https://www.youtube.com/watch?v=CccVNRFmR1I">  context-specific causal models </a>.</p>
 </div><!-- /.blurb -->
 
-
-<!-- 
-<!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML//EN">
-<html> <head> <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
-<title>Eliana M. Duarte </title>
-</head>
-
-<body  text="#000000" link="#008080" vlink="#3B5998"
-alink="#000000" bgproperties="fixed" topmargin="150" leftmargin="300">
-<font size="5" color="maroon">
- 
-   <img src="magdeburg.jpg" alt="Hauptbahnof" height="300" width="800">
-<h1 align="center"><a href="index.html" >Eliana M. Duarte</a>
- </h1>
-</font>
-<hr size="4" noshade>
-
-<div>
-
-
-<font size="4">
-
-  <p align = "left" > <img src="elianaProfile.JPG" alt="Profile" align="right" style="width:304px;height:228px;"/> 
-  <br>
-<br>
-  I am a postdoctoral reasearcher at Otto-von-Guericke Universit&auml;t Magdeburg. Previously
-  I worked in the Nonlinear algebra group at Max Planck Institute for Mathematics in the 
-  Sciences  in Leipzig. In May 2017 I obtained my PhD at University of Illinois Urbana - Champaign with
-<a href= "https://faculty.math.illinois.edu/~schenck/ "> Hal Schenck</a>. I like to work on
-problems related to Commutative Algebra, Algebraic Statistics and rigidity of rod and pinion
-2D and 3D frameworks. 
-</p>
-</font>
-
-
-<u>Email</u>: eliana DOT duarte AT ovgu DOT de <br>
- <a href= "DuarteCV2017.pdf"> Resume(CV).
-</a>
-</div>
-
-<br>
-<i class="fa fa-heart"></i><a href="https://www.math.ovgu.de/AlgStat-p-5190.html"> Complexity Reduction in
-Algebraic Statistics .</a> <i class="fa fa-heart"></i>
-Magdeburg. November 26-27, 2018.
-<br>
-<br>
-
-
-
-  <div id = "menu" align = "middle" >
-  <hr size="4" noshade>
-<font size="6" color="navy">
- &nbsp     <b>
-  <a href= "research.html">Research. </a></b> &nbsp &nbsp 
-<b><a href= "teaching.html">Teaching. </a> </b> &nbsp &nbsp 
-<b><a href= "https://github.com/emduart2"> Github profile. </a> &nbsp &nbsp </b>
-<b><a href= "miscellaneous.html">Miscellaneous. </a> </b>&nbsp &nbsp 
-</font>
-</div>
- <hr size="4" noshade>
-  <div id = "menu" align = "middle" >
-<!--
-<font size="6" color="navy">
- <b> <a href= "syzygies.html">Syzygies. </a></b> &nbsp &nbsp &nbsp
- <b> <a href= "seminareiag.html">Seminare IAG. </a></b> &nbsp &nbsp &nbsp
-</font>
-
-</div>
+ <h2>I am actively looking for a PhD student to join MPI MiS to work with me in the area of Algebraic Statistics. Deadline to apply August 15th, 2022. <a href= "https://www.mis.mpg.de/career/phd-applied-algebra-and-geometry.html" > </a>Announcement</h2>
 
 
 
 
 
-<hr size="4" noshade>
 
-</body> </html>
--->
+
+
