--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ Computational Algebra and  Geometry and Algebraic Statistics.  In May 2017 I obt
 Check out a video abstract about  <a href= "https://www.youtube.com/watch?v=CccVNRFmR1I">  context-specific causal models </a>.</p>
 </div><!-- /.blurb -->
 
- <h2>I am actively looking for a PhD student to join MPI MiS to work with me in the area of Algebraic Statistics. Deadline to apply August 15th, 2022. <a href= "https://www.mis.mpg.de/career/phd-applied-algebra-and-geometry.html" > </a>Announcement</h2>
+ <h2>I am actively looking for a PhD student to join MPI MiS to work with me in the area of Algebraic Statistics. Deadline to apply August 15th, 2022. <a href= "https://www.mis.mpg.de/career/phd-applied-algebra-and-geometry.html" > >Announcement</a></h2>
 
 
 
