--- a/index.html
+++ b/index.html
@@ -6,21 +6,22 @@ title: Eliana Duarte, PhD in Mathematics
 <div class="blurb">
   <h1>Eliana Duarte</h1>
   <p align = "right" > <img src="/assets/Eliana.jpg" alt="Eliana" align="left" style="width:350px;height:200px;">
-    I am a Junior Researcher at Centro de Matem&aacutetica Universidade do Porto in Porto, Portugal. My funding is provided by
+    Since January 2023 I lead the Research Group in Algebraic Statistics at Max-Planck-Institute for Mathematics in the Sciences in 
+    Leipzig. My research focuses on solving statistical problems using algebra, geometry and combinatorics.
+    Previously I was a  Junior Researcher at Centro de Matem&aacutetica Universidade do Porto in Porto, Portugal with funding provided by
     the Funda&ccedil&otilde para a Ci&ecircncia e a Tecnologia <a href= "https://www.fct.pt"> </a>  (FCT).
-    Previously I was a postdoctoral researcher in the research training group <a href="https://www.mathcore.ovgu.de">MathCore</a> at Otto-von-Guericke Universit&aumlt Magdeburg
+    Earlier, I was a postdoctoral researcher in the research training group <a href="https://www.mathcore.ovgu.de">MathCore</a> at Otto-von-Guericke Universit&aumlt Magdeburg
     and the<a href="https://www.mis.mpg.de/nlalg/research.html">  Nonlinear Algebra group </a> at Max-Planck-Institute for Mathematics in the Sciences in Leipzig.
-	  I like to work on
-Computational Algebra and  Geometry and Algebraic Statistics.  In May 2017 I obtained my PhD at University of Illinois Urbana - Champaign with
+	   In May 2017 I obtained my PhD at University of Illinois Urbana - Champaign with
     <a href= "https://faculty.math.illinois.edu/~schenck/ "> Hal Schenck</a>.</p>
   Checkout <a href = "https://tensorvoices.de">TensorVoices</a> a five episode podcast of conversations about tensors with enthusiastic guests. Hosted by <a href="https://thomas-kahle.de">
     Thomas Kahle and me.
 
 Check out a video abstract about  <a href= "https://www.youtube.com/watch?v=CccVNRFmR1I">  context-specific causal models </a>.</p>
 </div><!-- /.blurb -->
-
+<!-- 
 <h2>The Max-Planck-Institute for Mathematics in the Sciences at Leipzig has open positions for postdocs in the Nonlinear algebra grou. Deadline December 1st, 2022.
-  <a href= "https://www.mis.mpg.de/career/postdoc.html" > >Announcement</a></h2>
+  <a href= "https://www.mis.mpg.de/career/postdoc.html" > >Announcement</a></h2>-->
 
 
 
