--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@ title: Eliana Duarte, PhD in Mathematics
 <div class="blurb">
   <h1>Eliana Duarte</h1>
   <p align = "right" > <img src="/assets/Eliana.jpg" alt="Eliana" align="left" style="width:350px;height:200px;">
-    Since January 2023 I lead the Research Group in Algebraic Statistics at Max-Planck-Institute for Mathematics in the Sciences in 
+    Since January 2023 I will hold a joint appointment as Junior Researcher at Centro de Matem&aacutetica Universidade do Porto in Porto, Portugal with funding provided by
+    the Funda&ccedil&otilde para a Ci&ecircncia e a Tecnologia <a href= "https://www.fct.pt"> </a>  (FCT) and 
+    lead the Research Group in Algebraic Statistics at Max-Planck-Institute for Mathematics in the Sciences in 
     Leipzig. My research focuses on solving statistical problems using algebra, geometry and combinatorics.
-    Previously I was a  Junior Researcher at Centro de Matem&aacutetica Universidade do Porto in Porto, Portugal with funding provided by
-    the Funda&ccedil&otilde para a Ci&ecircncia e a Tecnologia <a href= "https://www.fct.pt"> </a>  (FCT).
     Earlier, I was a postdoctoral researcher in the research training group <a href="https://www.mathcore.ovgu.de">MathCore</a> at Otto-von-Guericke Universit&aumlt Magdeburg
     and the<a href="https://www.mis.mpg.de/nlalg/research.html">  Nonlinear Algebra group </a> at Max-Planck-Institute for Mathematics in the Sciences in Leipzig.
 	   In May 2017 I obtained my PhD at University of Illinois Urbana - Champaign with
