Added link to seminar

--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@ title: Eliana Duarte, PhD in Mathematics
     and the<a href="https://www.mis.mpg.de/nlalg/research.html">  Nonlinear Algebra group </a> at Max-Planck-Institute for Mathematics in the Sciences in Leipzig.
 	   In May 2017 I obtained my PhD at University of Illinois Urbana - Champaign with
     <a href= "https://faculty.math.illinois.edu/~schenck/ "> Hal Schenck</a>.</p>
+
+  <h2>
+    <a href="http://3-way-interaction.de"> The 3-Way-Interaction Seminar, a seminar in Algebraic Statistics will
+      start on January.
+    </a>
+  </h2>
   Checkout <a href = "https://tensorvoices.de">TensorVoices</a> a five episode podcast of conversations about tensors with enthusiastic guests. Hosted by <a href="https://thomas-kahle.de">
     Thomas Kahle and me.
 
