--- a/index.html
+++ b/index.html
@@ -15,11 +15,16 @@ title: Eliana Duarte, PhD in Mathematics
 	   In May 2017 I obtained my PhD at University of Illinois Urbana - Champaign with
     <a href= "https://faculty.math.illinois.edu/~schenck/ "> Hal Schenck</a>.</p>
 
-  <h2>
-    <a href="http://3-way-interaction.de"> The 3-Way-Interaction Seminar, a seminar in Algebraic Statistics will
-      start on January.
-    </a>
+  <h2>Latest News!</h2>
+    <ul>
+    <li> I was selected as a top 10% reviewer for AISTATS' 23!</li>
+    <li> The upcoming <a href="http://3-way-interaction.de"> The 3-Way-Interaction Seminar, a seminar in Algebraic Statistics</a>
+      will take place in Berlin on February 20th.
+    </li>
+    
+  </ul>
   </h2>
+  
   Checkout <a href = "https://tensorvoices.de">TensorVoices</a> a five episode podcast of conversations about tensors with enthusiastic guests. Hosted by <a href="https://thomas-kahle.de">
     Thomas Kahle and me.
 
